--- a/WebApp/Views/Blog/BlogDetails.cshtml
+++ b/WebApp/Views/Blog/BlogDetails.cshtml
@@ -1,7 +1,11 @@
-﻿@{
-    ViewData["Title"] = "Blog Details";
+﻿@model BusinessLogic.Dtos.News.ClientNewsDetailResponse
+@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer Localizer
+@{
+    ViewData["Title"] = Localizer["BlogDetails"];
+    var httpContext = ViewContext.HttpContext;
+    string appDomain = $"{httpContext.Request.Scheme}://{httpContext.Request.Host}";
 }
-
 @section Scripts {
 
 }
@@ -116,6 +120,7 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="comments-area">
                     <h4>05 Comments</h4>
                     <div class="comment-list">
