--- a/WebApp/Areas/Admin/Views/User/Index.cshtml
+++ b/WebApp/Areas/Admin/Views/User/Index.cshtml
@@ -71,7 +71,7 @@
                             <th>Email/Tên đăng nhập</th>
                             <th>Vai trò</th>
                             <th>Ngày sinh</th>
-                            <th>Điện thoại</th>s
+                            <th>Điện thoại</th>
                             <th>Trạng thái</th>
                             <th class="action-columns">Thao tác</th>
                         </tr>
