--- a/WebApp/Views/Blog/Index.cshtml
+++ b/WebApp/Views/Blog/Index.cshtml
@@ -1,10 +1,5 @@
-﻿@model BusinessLogic.Dtos.News.ClientNewsResponse
-@using Microsoft.AspNetCore.Mvc.Localization
-@inject IViewLocalizer Localizer
-@{
-    ViewData["Title"] = Localizer["Blog"];
-    var httpContext = ViewContext.HttpContext;
-    string appDomain = $"{httpContext.Request.Scheme}://{httpContext.Request.Host}";
+﻿@{
+    ViewData["Title"] = "Blog";
 }
 
 @section Scripts {
@@ -73,37 +68,34 @@
         <div class="row">
             <div class="col-lg-8">
                 <div class="blog_left_sidebar">
-                    @foreach (var item in Model.News)
-                    {
-                        <article class="row blog_item">
-                            <div class="col-md-3">
-                                <div class="blog_info text-right">
-                                    <div class="post_tag">
-                                        <a href="#">Food,</a>
-                                        <a href="#">Technology,</a>
-                                        <a href="#">Politics,</a>
-                                        <a href="#">Lifestyle</a>
-                                    </div>
-                                    <ul class="blog_meta list_style">
-                                        <li><a href="#">@appDomain@item.CreatedBy<i class="lnr lnr-user"></i></a></li>
-                                        <li><a href="#">@appDomain@item.CreatedOn<i class="lnr lnr-calendar-full"></i></a></li>
-                                        <li><a href="#">1.2M Views<i class="lnr lnr-eye"></i></a></li>
-                                        <li><a href="#">06 Comments<i class="lnr lnr-bubble"></i></a></li>
-                                    </ul>
+                    <article class="row blog_item">
+                        <div class="col-md-3">
+                            <div class="blog_info text-right">
+                                <div class="post_tag">
+                                    <a href="#">Food,</a>
+                                    <a href="#">Technology,</a>
+                                    <a href="#">Politics,</a>
+                                    <a href="#">Lifestyle</a>
+                                </div>
+                                <ul class="blog_meta list_style">
+                                    <li><a href="#">Mark wiens<i class="lnr lnr-user"></i></a></li>
+                                    <li><a href="#">12 Dec, 2017<i class="lnr lnr-calendar-full"></i></a></li>
+                                    <li><a href="#">1.2M Views<i class="lnr lnr-eye"></i></a></li>
+                                    <li><a href="#">06 Comments<i class="lnr lnr-bubble"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <div class="blog_post">
+                                <img src="~/assets/landing-page/image/blog/main-blog/m-blog-1.jpg" alt="">
+                                <div class="blog_details">
+                                    <a href="#"><h2>Astronomy Binoculars A Great Alternative</h2></a>
+                                    <p>MCSE boot camps have its supporters and its detractors. Some people do not understand why you should have to spend money on boot camp when you can get the MCSE study materials yourself at a fraction.</p>
+                                    <a href="#" class="view_btn button_hover">View More</a>
                                 </div>
                             </div>
-                            <div class="col-md-9">
-                                <div class="blog_post">
-                                    <img src="@appDomain@item.Thumbnail" alt="">
-                                    <div class="blog_details">
-                                        <a href="#"><h2>@appDomain@item.Title</h2></a>
-                                        <p>@appDomain@item.Description</p>
-                                        <a href="/blog/blog-details/@appDomain@item.Id" class="view_btn button_hover">View More</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </article>
-                    }                 
+                        </div>
+                    </article>
                     <article class="row blog_item">
                         <div class="col-md-3">
                             <div class="blog_info text-right">
