--- a/WebApp/Views/Room/Index.cshtml
+++ b/WebApp/Views/Room/Index.cshtml
@@ -136,9 +136,9 @@
                     <div class="accomodation_item text-center">
                         <div class="hotel_img">
                             <img src="@appDomain@item.Thumbnail" width="263px" height="270px" alt="post">
-                            <a href="/room-details/@appDomain@item.Id" class="btn theme_btn button_hover">@Localizer["BookNow"]</a>
+                            <a href="#" class="btn theme_btn button_hover">@Localizer["BookNow"]</a>
                         </div>
-                        <a href="/room-details/@appDomain@item.Id"><h4 class="sec_h4">@item.Name</h4></a>
+                        <a href="#"><h4 class="sec_h4">@item.Name</h4></a>
                         <h5>@string.Format("{0:N0} VND", item.Price)<small>@Localizer["/night"]</small></h5>
                     </div>
                 </div>
