--- a/WebApp/Views/Home/Index.cshtml
+++ b/WebApp/Views/Home/Index.cshtml
@@ -34,7 +34,7 @@
                                 <div class="book_tabel_item">
                                     <div class="form-group">
                                         <div class='input-group date' id='datetimepicker11'>
-                                            <input type='text' class="form-control" placeholder="Arrival Date" />
+                                            <input type='text' class="form-control" placeholder="@Localizer["ArrivalDate"]" />
                                             <span class="input-group-addon">
                                                 <i class="fa fa-calendar" aria-hidden="true"></i>
                                             </span>
@@ -42,7 +42,7 @@
                                     </div>
                                     <div class="form-group">
                                         <div class='input-group date' id='datetimepicker1'>
-                                            <input type='text' class="form-control" placeholder="Departure Date" />
+                                            <input type='text' class="form-control" placeholder="@Localizer["DepartureDate"]" />
                                             <span class="input-group-addon">
                                                 <i class="fa fa-calendar" aria-hidden="true"></i>
                                             </span>
@@ -54,18 +54,18 @@
                                 <div class="book_tabel_item">
                                     <div class="input-group">
                                         <select class="wide">
-                                            <option data-display="Adult">Adult</option>
-                                            <option value="1">Old</option>
-                                            <option value="2">Younger</option>
-                                            <option value="3">Potato</option>
+                                            <option data-display="@Localizer["Adult"]">@Localizer["Adult"]</option>
+                                            <option value="1">1 adults</option>
+                                            <option value="2">2 adults</option>
+                                            <option value="3">3 adults</option>
                                         </select>
                                     </div>
                                     <div class="input-group">
                                         <select class="wide">
-                                            <option data-display="Child">Child</option>
-                                            <option value="1">Child</option>
-                                            <option value="2">Baby</option>
-                                            <option value="3">Child</option>
+                                            <option data-display="@Localizer["Child"]">@Localizer["Child"]</option>
+                                            <option value="1">1 Child</option>
+                                            <option value="2">2 Child</option>
+                                            <option value="3">3 Child</option>
                                         </select>
                                     </div>
                                 </div>
@@ -74,13 +74,13 @@
                                 <div class="book_tabel_item">
                                     <div class="input-group">
                                         <select class="wide">
-                                            <option data-display="Child">Number of Rooms</option>
+                                            <option data-display="Child">@Localizer["RoomTypes"]</option>
                                             <option value="1">Room 01</option>
                                             <option value="2">Room 02</option>
                                             <option value="3">Room 03</option>
                                         </select>
                                     </div>
-                                    <a class="book_now_btn button_hover" href="#">Book Now</a>
+                                    <a class="book_now_btn button_hover" href="#">@Localizer["BookNow"]</a>
                                 </div>
                             </div>
                         </div>
