--- a/WebApp/Views/Room/Index.cshtml
+++ b/WebApp/Views/Room/Index.cshtml
@@ -65,7 +65,7 @@
                             <div class="book_tabel_item">
                                 <div class="form-group">
                                     <div class='input-group date' id='datetimepicker11'>
-                                        <input type='text' class="form-control" placeholder="Arrival Date" />
+                                        <input type='text' class="form-control" placeholder="@Localizer["ArrivalDate"]" />
                                         <span class="input-group-addon">
                                             <i class="fa fa-calendar" aria-hidden="true"></i>
                                         </span>
@@ -73,7 +73,7 @@
                                 </div>
                                 <div class="form-group">
                                     <div class='input-group date' id='datetimepicker1'>
-                                        <input type='text' class="form-control" placeholder="Departure Date" />
+                                        <input type='text' class="form-control" placeholder="@Localizer["DepartureDate"]" />
                                         <span class="input-group-addon">
                                             <i class="fa fa-calendar" aria-hidden="true"></i>
                                         </span>
@@ -85,18 +85,18 @@
                             <div class="book_tabel_item">
                                 <div class="input-group">
                                     <select class="wide">
-                                        <option data-display="Adult">Adult</option>
-                                        <option value="1">Old</option>
-                                        <option value="2">Younger</option>
-                                        <option value="3">Potato</option>
+                                        <option data-display="@Localizer["Adult"]">@Localizer["Adult"]</option>
+                                        <option value="1">1 adults</option>
+                                        <option value="2">2 adults</option>
+                                        <option value="3">3 adults</option>
                                     </select>
                                 </div>
                                 <div class="input-group">
                                     <select class="wide">
-                                        <option data-display="Child">Child</option>
-                                        <option value="1">Child</option>
-                                        <option value="2">Baby</option>
-                                        <option value="3">Child</option>
+                                        <option data-display="@Localizer["Child"]">@Localizer["Child"]</option>
+                                        <option value="1">1 Child</option>
+                                        <option value="2">2 Child</option>
+                                        <option value="3">3 Child</option>
                                     </select>
                                 </div>
                             </div>
@@ -105,7 +105,7 @@
                             <div class="book_tabel_item">
                                 <div class="input-group">
                                     <select class="wide">
-                                        <option data-display="Room Types">@Localizer["RoomTypes"]</option>
+                                        <option data-display="Child">@Localizer["RoomTypes"]</option>
                                         <option value="1">Room 01</option>
                                         <option value="2">Room 02</option>
                                         <option value="3">Room 03</option>
