--- a/WebApp/Views/Room/RoomDetails.cshtml
+++ b/WebApp/Views/Room/RoomDetails.cshtml
@@ -71,9 +71,6 @@
         <div class="row">
             <div class="col-lg-8">
                 <div class="row">
-                    <div class="main_title mt50">
-                        <h2 class="mb-4">  About @Model.Room.Name</h2>
-                    </div>
                     <div class="col-md-12 ftco-animate">
                         <div class="single-slider owl-carousel">
                             <div class="item">
@@ -82,7 +79,10 @@
                         </div>
                     </div>
                     <div class="col-md-12 room-single mt-4 mb-5 ftco-animate">
-                        <p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane. Pityful a rethoric question ran over her cheek, then she continued her way.</p>
+                        <div class="main_title" style="font-size: 10px;">
+                            <h2>  About @Model.Room.Name</h2>
+                        </div>
+                        <p>@Html.Raw(Model.Room.Description)</p>
                         <div class="d-md-flex mt-5 mb-5">
                             <ul class="list">
                                 <li><span>Max:</span> @Model.Room.Adult person</li>
@@ -93,7 +93,6 @@
                                 <li><span>Bed:</span> 1</li>
                             </ul>
                         </div>
-                        <p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane. Pityful a rethoric question ran over her cheek, then she continued her way.</p>
                     </div>
                 </div>
                 <div class="main_title" style="font-size: 10px;">
@@ -199,8 +198,8 @@
                         <h4>NEED HELP?</h4>
                         <div class="help">
                             If you have any question please don't hesitate to contact us
-                            <div class="phone"><i class="fa  fa-phone"></i><a href="tel:18475555555"> 1-888-123-4567 </a></div>
-                            <div class="email"><i class="fa  fa-envelope-o "></i><a href="/cdn-cgi/l/email-protection#97f4f8f9e3f6f4e3d7e4fee3f2b9f4f8fa"><span class="__cf_email__" data-cfemail="2f4c40415b4e4c5b6f5c465b4a014c4042">[email&#160;protected]</span></a> or use <a href="contact.html"> contact form</a></div>
+                            <div class="phone"><i class="fa  fa-phone"></i><a href="tel:0383681047"> 0383681047 </a></div>
+                            <div class="email"><i class="fa  fa-envelope-o "></i><a href="nvdat0204@gmail.com"><span class="__cf_email__" data-cfemail="nvdat0204@gmail.com">nvdat0204@gmail.com</span></a> or use <a href="/contact"> contact form</a></div>
                         </div>
                     </aside>
                 </div>             
