--- a/WebApp/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/WebApp/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -20,6 +20,7 @@
     <link href="~/lib/ckeditor/skins/moono/editor.css" rel="stylesheet" />
     <link href="~/assets/admin/css/dashboad.css" rel="stylesheet" />
     <link href="~/assets/admin/css/custom.css" rel="stylesheet"  />
+    <link href="~/css/loading.css" rel="stylesheet">
     @await RenderSectionAsync("Styles", required: false)
 </head>
 
