--- a/WebApp/Areas/Admin/Views/Booking/Index.cshtml
+++ b/WebApp/Areas/Admin/Views/Booking/Index.cshtml
@@ -26,7 +26,6 @@
 </div>
 <!-- end page title -->
 
-
 <div class="row">
     <div class="col-12">
         <div class="card">
@@ -55,7 +54,15 @@
                             <th class="action-columns">Thao tác</th>
                         </tr>
                     </thead>
-                    <tbody id="tbl-content"></tbody>
+                    <tbody id="tbl-content">
+                        <tr id="spinnerRow">
+                            <td colspan="10" style="text-align: center;">
+                                <div id="spinner" class="spinner-border text-primary" role="status">
+                                    <div class="loader"></div>
+                                </div>
+                            </td>
+                        </tr>
+                    </tbody>
                 </table>
                 <partial name="_PaginationPartial" />
             </div> <!-- end card body-->
