--- a/WebApp/Areas/Admin/Views/Services/Index.cshtml
+++ b/WebApp/Areas/Admin/Views/Services/Index.cshtml
@@ -59,7 +59,15 @@
                             <th class="action-columns">Thao tác</th>
                         </tr>
                     </thead>
-                    <tbody id="tbl-content"></tbody>
+                    <tbody id="tbl-content">
+                        <tr id="spinnerRow">
+                            <td colspan="10" style="text-align: center;">
+                                <div id="spinner" class="spinner-border text-primary" role="status">
+                                    <div class="loader"></div>
+                                </div>
+                            </td>
+                        </tr>
+                    </tbody>
                 </table>
                 <partial name="_PaginationPartial" />
             </div> <!-- end card body-->
