--- a/WebApp/Views/Blog/Index.cshtml
+++ b/WebApp/Views/Blog/Index.cshtml
@@ -1,9 +1,15 @@
-﻿@{
-    ViewData["Title"] = "Blog";
+﻿@model BusinessLogic.Wrapper.PaginatedResult<BusinessLogic.Dtos.News.NewsResponse>
+@using Microsoft.AspNetCore.Mvc.Localization
+@using BusinessLogic.Constants.Application
+@inject IViewLocalizer Localizer
+@{
+    ViewData["Title"] = Localizer["Blog"]; 
+    var httpContext = ViewContext.HttpContext;
+    string appDomain = $"{httpContext.Request.Scheme}://{httpContext.Request.Host}";
 }
 
-@section Scripts {
-
+@section Styles {
+    <link href="~/css/load-more.css" rel="stylesheet" media="all" />
 }
 
 <!--================Banner Area =================-->
@@ -18,13 +24,14 @@
     </div>
 </section>
 <!--================Banner Area =================-->
+
 <!--================Blog Categorie Area =================-->
 <section class="blog_categorie_area">
     <div class="container">
         <div class="row">
             <div class="col-lg-4">
                 <div class="categories_post">
-                    <img src="~/assets/landing-page/image/blog/cat-post/cat-post-3.jpg" alt="post">
+                    <img src="~/assets/landing-page/image/blog/cat-post/cat-post-2.jpg" alt="post">
                     <div class="categories_details">
                         <div class="categories_text">
                             <a href="blog-details.html"><h5>Social Life</h5></a>
@@ -36,12 +43,12 @@
             </div>
             <div class="col-lg-4">
                 <div class="categories_post">
-                    <img src="~/assets/landing-page/image/blog/cat-post/cat-post-2.jpg" alt="post">
+                    <img src="~/assets/landing-page/image/blog/cat-post/cat-post-3.jpg" alt="post">
                     <div class="categories_details">
                         <div class="categories_text">
-                            <a href="blog-details.html"><h5>Politics</h5></a>
+                            <a href="/blog"><h5>Travel</h5></a>
                             <div class="border_line"></div>
-                            <p>Be a part of politics</p>
+                            <p>Articles about travel</p>
                         </div>
                     </div>
                 </div>
@@ -62,175 +69,26 @@
     </div>
 </section>
 <!--================Blog Categorie Area =================-->
+
 <!--================Blog Area =================-->
 <section class="blog_area">
     <div class="container">
         <div class="row">
             <div class="col-lg-8">
                 <div class="blog_left_sidebar">
-                    <article class="row blog_item">
-                        <div class="col-md-3">
-                            <div class="blog_info text-right">
-                                <div class="post_tag">
-                                    <a href="#">Food,</a>
-                                    <a href="#">Technology,</a>
-                                    <a href="#">Politics,</a>
-                                    <a href="#">Lifestyle</a>
-                                </div>
-                                <ul class="blog_meta list_style">
-                                    <li><a href="#">Mark wiens<i class="lnr lnr-user"></i></a></li>
-                                    <li><a href="#">12 Dec, 2017<i class="lnr lnr-calendar-full"></i></a></li>
-                                    <li><a href="#">1.2M Views<i class="lnr lnr-eye"></i></a></li>
-                                    <li><a href="#">06 Comments<i class="lnr lnr-bubble"></i></a></li>
-                                </ul>
-                            </div>
+                    @await Html.PartialAsync("_BlogPartial", Model)
+                    @if (Model.TotalPages > 1)
+                    {
+                        <div class="load-more">
+                            <button type="button" id="load-more-news" data-total-page="@Model.TotalPages">Load more</button>
                         </div>
-                        <div class="col-md-9">
-                            <div class="blog_post">
-                                <img src="~/assets/landing-page/image/blog/main-blog/m-blog-1.jpg" alt="">
-                                <div class="blog_details">
-                                    <a href="#"><h2>Astronomy Binoculars A Great Alternative</h2></a>
-                                    <p>MCSE boot camps have its supporters and its detractors. Some people do not understand why you should have to spend money on boot camp when you can get the MCSE study materials yourself at a fraction.</p>
-                                    <a href="#" class="view_btn button_hover">View More</a>
-                                </div>
-                            </div>
-                        </div>
-                    </article>
-                    <article class="row blog_item">
-                        <div class="col-md-3">
-                            <div class="blog_info text-right">
-                                <div class="post_tag">
-                                    <a href="#">Food,</a>
-                                    <a href="#">Technology,</a>
-                                    <a href="#">Politics,</a>
-                                    <a href="#">Lifestyle</a>
-                                </div>
-                                <ul class="blog_meta list_style">
-                                    <li><a href="#">Mark wiens<i class="lnr lnr-user"></i></a></li>
-                                    <li><a href="#">12 Dec, 2017<i class="lnr lnr-calendar-full"></i></a></li>
-                                    <li><a href="#">1.2M Views<i class="lnr lnr-eye"></i></a></li>
-                                    <li><a href="#">06 Comments<i class="lnr lnr-bubble"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <div class="blog_post">
-                                <img src="~/assets/landing-page/image/blog/main-blog/m-blog-2.jpg" alt="">
-                                <div class="blog_details">
-                                    <a href="#"><h2>The Basics Of Buying A Telescope</h2></a>
-                                    <p>MCSE boot camps have its supporters and its detractors. Some people do not understand why you should have to spend money on boot camp when you can get the MCSE study materials yourself at a fraction.</p>
-                                    <a href="#" class="view_btn button_hover">View More</a>
-                                </div>
-                            </div>
-                        </div>
-                    </article>
-                    <article class="row blog_item">
-                        <div class="col-md-3">
-                            <div class="blog_info text-right">
-                                <div class="post_tag">
-                                    <a href="#">Food,</a>
-                                    <a href="#">Technology,</a>
-                                    <a href="#">Politics,</a>
-                                    <a href="#">Lifestyle</a>
-                                </div>
-                                <ul class="blog_meta list_style">
-                                    <li><a href="#">Mark wiens<i class="lnr lnr-user"></i></a></li>
-                                    <li><a href="#">12 Dec, 2017<i class="lnr lnr-calendar-full"></i></a></li>
-                                    <li><a href="#">1.2M Views<i class="lnr lnr-eye"></i></a></li>
-                                    <li><a href="#">06 Comments<i class="lnr lnr-bubble"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <div class="blog_post">
-                                <img src="~/assets/landing-page/image/blog/main-blog/m-blog-3.jpg" alt="">
-                                <div class="blog_details">
-                                    <a href="#"><h2>The Glossary Of Telescopes</h2></a>
-                                    <p>MCSE boot camps have its supporters and its detractors. Some people do not understand why you should have to spend money on boot camp when you can get the MCSE study materials yourself at a fraction.</p>
-                                    <a href="#" class="view_btn button_hover">View More</a>
-                                </div>
-                            </div>
-                        </div>
-                    </article>
-                    <article class="row blog_item">
-                        <div class="col-md-3">
-                            <div class="blog_info text-right">
-                                <div class="post_tag">
-                                    <a href="#">Food,</a>
-                                    <a href="#">Technology,</a>
-                                    <a href="#">Politics,</a>
-                                    <a href="#">Lifestyle</a>
-                                </div>
-                                <ul class="blog_meta list_style">
-                                    <li><a href="#">Mark wiens<i class="lnr lnr-user"></i></a></li>
-                                    <li><a href="#">12 Dec, 2017<i class="lnr lnr-calendar-full"></i></a></li>
-                                    <li><a href="#">1.2M Views<i class="lnr lnr-eye"></i></a></li>
-                                    <li><a href="#">06 Comments<i class="lnr lnr-bubble"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <div class="blog_post">
-                                <img src="~/assets/landing-page/image/blog/main-blog/m-blog-4.jpg" alt="">
-                                <div class="blog_details">
-                                    <a href="#"><h2>The Night Sky</h2></a>
-                                    <p>MCSE boot camps have its supporters and its detractors. Some people do not understand why you should have to spend money on boot camp when you can get the MCSE study materials yourself at a fraction.</p>
-                                    <a href="#" class="view_btn button_hover">View More</a>
-                                </div>
-                            </div>
-                        </div>
-                    </article>
-                    <article class="row blog_item">
-                        <div class="col-md-3">
-                            <div class="blog_info text-right">
-                                <div class="post_tag">
-                                    <a href="#">Food,</a>
-                                    <a href="#">Technology,</a>
-                                    <a href="#">Politics,</a>
-                                    <a href="#">Lifestyle</a>
-                                </div>
-                                <ul class="blog_meta list_style">
-                                    <li><a href="#">Mark wiens<i class="lnr lnr-user"></i></a></li>
-                                    <li><a href="#">12 Dec, 2017<i class="lnr lnr-calendar-full"></i></a></li>
-                                    <li><a href="#">1.2M Views<i class="lnr lnr-eye"></i></a></li>
-                                    <li><a href="#">06 Comments<i class="lnr lnr-bubble"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <div class="blog_post">
-                                <img src="~/assets/landing-page/image/blog/main-blog/m-blog-5.jpg" alt="">
-                                <div class="blog_details">
-                                    <a href="#"><h2>Telescopes 101</h2></a>
-                                    <p>MCSE boot camps have its supporters and its detractors. Some people do not understand why you should have to spend money on boot camp when you can get the MCSE study materials yourself at a fraction.</p>
-                                    <a href="#" class="view_btn button_hover">View More</a>
-                                </div>
-                            </div>
-                        </div>
-                    </article>
-                    <nav class="blog-pagination justify-content-center d-flex">
+                    }
+                    
+                    @* <nav class="blog-pagination justify-content-center d-flex">
                         <ul class="pagination">
-                            <li class="page-item">
-                                <a href="#" class="page-link" aria-label="Previous">
-                                    <span aria-hidden="true">
-                                        <span class="lnr lnr-chevron-left"></span>
-                                    </span>
-                                </a>
-                            </li>
-                            <li class="page-item"><a href="#" class="page-link">01</a></li>
-                            <li class="page-item active"><a href="#" class="page-link">02</a></li>
-                            <li class="page-item"><a href="#" class="page-link">03</a></li>
-                            <li class="page-item"><a href="#" class="page-link">04</a></li>
-                            <li class="page-item"><a href="#" class="page-link">09</a></li>
-                            <li class="page-item">
-                                <a href="#" class="page-link" aria-label="Next">
-                                    <span aria-hidden="true">
-                                        <span class="lnr lnr-chevron-right"></span>
-                                    </span>
-                                </a>
-                            </li>
+                            <button>Load more</button>
                         </ul>
-                    </nav>
+                    </nav> *@
                 </div>
             </div>
             <div class="col-lg-4">
