--- a/WebApp/Areas/Admin/Views/News/Index.cshtml
+++ b/WebApp/Areas/Admin/Views/News/Index.cshtml
@@ -53,7 +53,9 @@
                             <th>Stt</th>
                             <th>Tiêu đề</th>
                             <th>Hình ảnh</th>
-                            <th>Nội dung</th>
+                            <th>Thể loại</th>
+                            <th>Tóm tắt</th>
+                            <th>Tác giả</th>
                             <th>Bài viết</th>
                             <th>Trạng thái</th>
                             <th class="action-columns">Thao tác</th>
@@ -81,7 +83,9 @@
         <td>{{Order}}</td>
         <td>{{Title}}</td>
         <td>{{{Thumbnail}}}</td>
-        <td class="long-col">{{Content}}</td>
+        <td>{{NewsType}}</td>
+        <td class="long-col">{{Summary}}</td>
+        <td>{{Author}}</td>
         <td>{{{Hot}}}</td>
         <td>{{{Status}}}</td>
         <td class="text-center action-columns">
